--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -24,6 +24,6 @@ a {
 
 .arjs-loader div {
     text-align: center;
-    font-size: 5.25em;
-    color: blue;
+    font-size: 1.25em;
+    color: white;
 }
